Bug 160190 - page menu is not updated after removing a bookmark
Summary: page menu is not updated after removing a bookmark
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-04-01 00:25 UTC by albert
Modified: 2008-04-01 01:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description albert 2008-04-01 00:25:36 UTC
Version:            (using KDE 4.0.2)
Installed from:    Ubuntu Packages

when you remove a bookmark by means of the menu in the side panel, the menu of the page, the bookmark was pointing to, keeps showing "Remove Bookmark" entry until you  reopen the document.
Comment 1 Pino Toscano 2008-04-01 01:15:20 UTC
SVN commit 792392 by pino:

Backport: keep the page cache updated.

CCBUG: 160190


 M  +2 -0      bookmarkmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=792392
Comment 2 Pino Toscano 2008-04-01 01:15:28 UTC
SVN commit 792391 by pino:

Keep the page cache updated.

BUG: 160190


 M  +2 -0      bookmarkmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=792391