Keep the page cache updated.

BUG: 160190

svn path=/trunk/KDE/kdegraphics/okular/; revision=792391